Added Users endpoint & frontend Ui

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body{
+    background: url('./assets/images/chat-background.jpeg') no-repeat bottom fixed;
+    background-size: cover;
+}
